After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755456 - glmemory: fix texture leak in _gl_mem_copy
glmemory: fix texture leak in _gl_mem_copy
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-23 09:05 UTC by Julien Isorce
Modified: 2015-09-25 10:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
git log (1.42 KB, patch)
2015-09-23 09:06 UTC, Julien Isorce
committed Details | Review

Description Julien Isorce 2015-09-23 09:05:30 UTC
I have noticed a leak in _gl_mem_copy in the "} else {", it calls _gl_mem_init which generate the texture because tex_id is 0. _gl_mem_create should check for texture_wrapped flag instead.

I have not really search for a pipeline that shows the problem. But patch follows.
Comment 1 Julien Isorce 2015-09-23 09:06:58 UTC
Created attachment 311929 [details] [review]
git log
Comment 2 Matthew Waters (ystreet00) 2015-09-25 10:44:11 UTC
commit 04856e6c8a0d51a96bebeb7bc77338b8efc4ed10
Author: Julien Isorce <j.isorce@samsung.com>
Date:   Thu Sep 17 14:17:09 2015 +0100

    glmemory: fix texture leak in _gl_mem_copy
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755456