glmemory: fix texture leak in _gl_mem_copy

https://bugzilla.gnome.org/show_bug.cgi?id=755456